tests/golden_files/block_right_old.txt
Traceback (most recent call last):
 File "formatter_example.py", line 68, in block_right
      64 | def block_right():
      65 |     nb = len(letter
                    ^^^^^^^^^^
      66 |              for letter
                        ^^^^^^^^^^
      67 |                in
                        ^^^^
-->   68 |              "words")
                        ^^^^^^^^
TypeError: object of type 'generator' has no len()
